# interpret-useeffect

./: environment.yml
baseline_diagnostic/: README.md  baseline_logits_3tokens.csv  baseline_summary_table.csv  baseline_wide_per_sample.csv  pilot_experiment.ipynb
dataset/: PROMPT.md  dataset.json  generate_dataset.js  generate_reactivity_ablation.js  generate_reactivity_generalization.js  generate_reactivity_pilot.js  pyproject.toml  reactivity_ablation_dataset.json  reactivity_dataset.json  reactivity_generalization_dataset.json  validate_log.txt  validate_tokens.py  variable_names.json  variable_names_validated.json
pilot/: pilot_dataset.json  pilot_experiment.ipynb
pilot_control/: pilot_dataset_control.json  pilot_experiment.ipynb
pilot_target/: pilot_dataset.json  run_gemma3_1b.ipynb  run_llama3_1b.ipynb
reactivity_ablation/: run_reactivity_ablation.py
reactivity_generalization/: pyproject.toml  reactivity_generalization_summary.md  reactivity_generalization_validation_report.md  run_reactivity_generalization.py
reactivity_generalization/reactivity_generalization/: reactivity_generalization_logits_3tokens.csv  reactivity_generalization_pairlevel_test.csv  reactivity_generalization_regression.csv  reactivity_generalization_summary.md  reactivity_generalization_validation_report.md  reactivity_generalization_wide_per_sample.csv
reactivity_pilot/: reactivity_inference.ipynb  reactivity_inference_summary.md  reactivity_logits_3tokens.csv  reactivity_pairlevel_test.csv  reactivity_pilot.ipynb  reactivity_regression.csv  reactivity_summary.md  (+2 more)
(+17 files in other folders)
