[project]
name = "reactivity-generalization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
